Validated HTML files/Fixed alt tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "keywords" content = "Brandon Truong, Truong Brandon, TruBran Ongdon" />
-    <meta name = "description" content = "About me, Brandon Truong" />
-    <meta name = "author" content = "Brandon Truong" />
+    <meta name = "keywords" content = "Brandon Truong, Truong Brandon, TruBran Ongdon, Lovely Birds">
+    <meta name = "description" content = "Blog posts from me, Brandon Truong">
+    <meta name = "author" content = "Brandon Truong">
     <meta name = "date" content="October 16, 2022">
     <title>Index</title>
 </head>
@@ -31,7 +31,7 @@
         probably just straight up unintelligble for some people, and you know what? <strong>That's okay as well.</strong>
         </p>
         <img src="https://cdn.pixabay.com/photo/2020/01/20/05/57/funny-4779563_1280.jpg" 
-             alt="A Penguin Flying" 
+             alt="A Snail, Sliming Menacingly" 
              width="300"
              height="300">
     </div>
