--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "keywords" content = "Brandon Truong, Truong Brandon, TruBran Ongdon" />
-    <meta name = "description" content = "About me, Brandon Truong" />
-    <meta name = "author" content = "Brandon Truong" />
+    <meta name = "keywords" content = "Brandon Truong, Truong Brandon, TruBran Ongdon">
+    <meta name = "description" content = "About me, Brandon Truong">
+    <meta name = "author" content = "Brandon Truong">
     <meta name = "date" content="October 16, 2022">
     <title>Document</title>
 </head>
