Added Contact Form and Updated Nav(Contact)

--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "keywords" content = "Brandon Truong, Truong Brandon, TruBran Ongdon">
-    <meta name = "description" content = "About me, Brandon Truong">
-    <meta name = "author" content = "Brandon Truong">
-    <meta name = "date" content="October 16, 2022">
+    <meta name="keywords" content="Brandon Truong, Truong Brandon, TruBran Ongdon">
+    <meta name="description" content="About me, Brandon Truong">
+    <meta name="author" content="Brandon Truong">
+    <meta name="date" content="October 16, 2022">
     <title>Document</title>
 </head>
 <body>
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="./index.html">Index</a></li>
             <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -28,7 +29,7 @@
     <p>I love working with people that have ideas and wants for the future and the things they make. Well, I also love making things with
         people that want nothing more than to just indulge their impulsive nature when it comes to random scripts, you really don't have to make anything
         useful. I mean, you don't gotta do anything. I mean, just work on a project with me. I mean, please help me learn things so I can feel
-        more validated with my ability to do things. 
+        more validated with my ability to do things.
     </p>
     <h2>I work with:</h2>
     <ul>
