--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "keywords" content = "Brandon Truong, Truong Brandon, TruBran Ongdon, Lovely Birds">
-    <meta name = "description" content = "Blog posts from me, Brandon Truong">
-    <meta name = "author" content = "Brandon Truong">
-    <meta name = "date" content="October 16, 2022">
+    <meta name="keywords" content="Brandon Truong, Truong Brandon, TruBran Ongdon, Lovely Birds">
+    <meta name="description" content="Blog posts from me, Brandon Truong">
+    <meta name="author" content="Brandon Truong">
+    <meta name="date" content="October 16, 2022">
     <title>Index</title>
 </head>
+
 <body>
     <nav>
         <ul>
             <li><a href="./index.html">Index</a></li>
             <li><a href="./about.html">About</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
     <div id="blog1">
@@ -22,37 +25,71 @@
         <h5>Author: Brandon Truong</h5>
         <h6>Date Published: October 16, 2022</h6>
         <p>
-        Today was just meant for me to get things done. You know, really get things done and that hasn't really been the case in a pretty long
-        time, so let me get started on how that's going. We made some chicken vindaloo during the first few hours of the day and really got into how
-        cooking can really make a difference in your life. Just taking the time to make something good and you don't exactly how it's going to turn out,
-        is probably something that loving parents would say later in their life. In a way, that gets you thinking that there are some aspects to people you'll
-        never really get to see, and that's okay I think. You can enjoy someone in their most concrete self, but come to appreciate those moments when
-        they reveal something to you that you didn't know about them before. It's an exercise, I think. Anyway, it was nice to get that bit out, and it was
-        probably just straight up unintelligble for some people, and you know what? <strong>That's okay as well.</strong>
+            Today was just meant for me to get things done. You know, really get
+            things done and that hasn't really been the case in a pretty long time,
+            so let me get started on how that's going. We made some chicken vindaloo
+            during the first few hours of the day and really got into how cooking
+            can really make a difference in your life. Just taking the time to make
+            something good and you don't exactly how it's going to turn out, is
+            probably something that loving parents would say later in their life. In
+            a way, that gets you thinking that there are some aspects to people
+            you'll never really get to see, and that's okay I think. You can enjoy
+            someone in their most concrete self, but come to appreciate those
+            moments when they reveal something to you that you didn't know about
+            them before. It's an exercise, I think. Anyway, it was nice to get that
+            bit out, and it was probably just straight up unintelligble for some
+            people, and you know what? <strong>That's okay as well.</strong>
         </p>
-        <img src="https://cdn.pixabay.com/photo/2020/01/20/05/57/funny-4779563_1280.jpg" 
-             alt="A Snail, Sliming Menacingly" 
-             width="300"
-             height="300">
+        <img src="https://cdn.pixabay.com/photo/2020/01/20/05/57/funny-4779563_1280.jpg"
+            alt="A Snail, Sliming Menacingly" width="300" height="300">
+
+        <table>
+            <tbody>
+                <tr>
+                    <th scope="col">Snail</th>
+                    <th scope="col">Bird</th>
+                </tr>
+                <tr>
+                    <td>Slimey</td>
+                    <td>Flighty</td>
+                </tr>
+                <tr>
+                    <td>Shelly</td>
+                    <td>Feathery</td>
+                </tr>
+                <tr>
+                    <td>Stalky Eyes</td>
+                    <td>Wacky Eyes</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <div id="blog2">
         <h3>How My Day Went Yesterday</h3>
         <h5>Author: Brandon Truong</h5>
         <h6>Date Published: October 16, 2022</h6>
         <p>
-        If you can say anything about someone and push back the fact that it could be completely untrue and not the case at all what would it be?
-        It seems like it could just be about anything, I mean, the whole thought I was probably trying to get at was that you could literally say anything
-        about anyone, and there isn't a framework you could use but the one where your mind lives. Things have been getting into my mind where it's like
-        I don't really care if my reality is fake or not, because I'm just going to kill the self that I live in right now, and that's pretty hardcore. <em>Maybe?</em>
-        I don't mind how things turn out, but I do mind if I start to come into a realization that I'm going to not be living the way I was living the past
-        few months. That's weird. I like to think I'm a pretty grounded person, but some things that are coming into my head lately are starting to make me
-        feel a bit uncertain about how I should move. This was all started with me watching my roommate as they proceeded to not wash their rice before they cooked it.
-        I don't know how to explain that much further.
+            If you can say anything about someone and push back the fact that it
+            could be completely untrue and not the case at all what would it be? It
+            seems like it could just be about anything, I mean, the whole thought I
+            was probably trying to get at was that you could literally say anything
+            about anyone, and there isn't a framework you could use but the one
+            where your mind lives. Things have been getting into my mind where it's
+            like I don't really care if my reality is fake or not, because I'm just
+            going to kill the self that I live in right now, and that's pretty
+            hardcore. <em>Maybe?</em>
+            I don't mind how things turn out, but I do mind if I start to come into
+            a realization that I'm going to not be living the way I was living the
+            past few months. That's weird. I like to think I'm a pretty grounded
+            person, but some things that are coming into my head lately are starting
+            to make me feel a bit uncertain about how I should move. This was all
+            started with me watching my roommate as they proceeded to not wash their
+            rice before they cooked it. I don't know how to explain that much
+            further.
         </p>
-        <img src="https://thumbs.dreamstime.com/b/surreal-funny-flying-penguin-bird-can-fly-above-clouds-blue-sky-114377523.jpg" 
-             alt="A Penguin Flying" 
-             width="300"
-             height="300">
+        <img src="https://thumbs.dreamstime.com/b/surreal-funny-flying-penguin-bird-can-fly-above-clouds-blue-sky-114377523.jpg"
+            alt="A Penguin Flying" width="300" height="300">
     </div>
 </body>
+
 </html>
