Added email newsletter signup

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
         <img src="https://thumbs.dreamstime.com/b/surreal-funny-flying-penguin-bird-can-fly-above-clouds-blue-sky-114377523.jpg"
             alt="A Penguin Flying" width="300" height="300">
     </div>
+
+    <form>
+        <label> Sign up for our newsletter
+            <input type="text">
+        </label>
+        <button type="submit">Subscribe</button>
+    </form>
 </body>
 
 </html>
