Refactored to include semantic tags

--- a/about.html
+++ b/about.html
@@ -11,30 +11,33 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Index</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Index</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
     <h1>About Me:</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR49OEV3IsohGAN58FWHHnzPJqPzBpMZ7gtJ6mSwL9EJGJ3_xe52lDUN6o" 
-         alt="Another Brandon Truong"
-         width="300"
-         height="300">
-    <h6>That's Another Brandon Truong by the way</h6>
-    <p>People say I'm working, but I say I'm not working. I'm not sure where I was going with that, but take it as some wiseman speech</p>
-    <p>I love working with people that have ideas and wants for the future and the things they make. Well, I also love making things with
-        people that want nothing more than to just indulge their impulsive nature when it comes to random scripts, you really don't have to make anything
-        useful. I mean, you don't gotta do anything. I mean, just work on a project with me. I mean, please help me learn things so I can feel
-        more validated with my ability to do things.
-    </p>
-    <h2>I work with:</h2>
-    <ul>
-        <li>Random Projects</li>
-        <li>Projects That Aren't Random</li>
-    </ul>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR49OEV3IsohGAN58FWHHnzPJqPzBpMZ7gtJ6mSwL9EJGJ3_xe52lDUN6o" 
+            alt="Another Brandon Truong"
+            width="300"
+            height="300">
+        <h6>That's Another Brandon Truong by the way</h6>
+        <p>People say I'm working, but I say I'm not working. I'm not sure where I was going with that, but take it as some wiseman speech</p>
+        <p>I love working with people that have ideas and wants for the future and the things they make. Well, I also love making things with
+            people that want nothing more than to just indulge their impulsive nature when it comes to random scripts, you really don't have to make anything
+            useful. I mean, you don't gotta do anything. I mean, just work on a project with me. I mean, please help me learn things so I can feel
+            more validated with my ability to do things.
+        </p>
+        <h2>I work with:</h2>
+        <ul>
+            <li>Random Projects</li>
+            <li>Projects That Aren't Random</li>
+        </ul>
+    </section>
 </body>
 </html>
