--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="./index.html">Index</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <div id="blog1">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Index</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <article>
         <h3>How My Day Is Going</h3>
         <h5>Author: Brandon Truong</h5>
         <h6>Date Published: October 16, 2022</h6>
@@ -63,8 +65,8 @@
                 </tr>
             </tbody>
         </table>
-    </div>
-    <div id="blog2">
+    </article>
+    <article>
         <h3>How My Day Went Yesterday</h3>
         <h5>Author: Brandon Truong</h5>
         <h6>Date Published: October 16, 2022</h6>
@@ -89,14 +91,15 @@
         </p>
         <img src="https://thumbs.dreamstime.com/b/surreal-funny-flying-penguin-bird-can-fly-above-clouds-blue-sky-114377523.jpg"
             alt="A Penguin Flying" width="300" height="300">
-    </div>
-
-    <form>
-        <label> Sign up for our newsletter
-            <input type="text">
-        </label>
-        <button type="submit">Subscribe</button>
-    </form>
+    </article>
+    <section>
+        <form>
+            <label> Sign up for our newsletter
+                <input type="text">
+            </label>
+            <button type="submit">Subscribe</button>
+        </form>
+    </section>
 </body>
 
 </html>
