--- a/index.html
+++ b/index.html
@@ -22,50 +22,52 @@
             </ul>
         </nav>
     </header>
-    <article>
-        <h3>How My Day Is Going</h3>
-        <h5>Author: Brandon Truong</h5>
-        <h6>Date Published: October 16, 2022</h6>
-        <p>
-            Today was just meant for me to get things done. You know, really get
-            things done and that hasn't really been the case in a pretty long time,
-            so let me get started on how that's going. We made some chicken vindaloo
-            during the first few hours of the day and really got into how cooking
-            can really make a difference in your life. Just taking the time to make
-            something good and you don't exactly how it's going to turn out, is
-            probably something that loving parents would say later in their life. In
-            a way, that gets you thinking that there are some aspects to people
-            you'll never really get to see, and that's okay I think. You can enjoy
-            someone in their most concrete self, but come to appreciate those
-            moments when they reveal something to you that you didn't know about
-            them before. It's an exercise, I think. Anyway, it was nice to get that
-            bit out, and it was probably just straight up unintelligble for some
-            people, and you know what? <strong>That's okay as well.</strong>
-        </p>
-        <img src="https://cdn.pixabay.com/photo/2020/01/20/05/57/funny-4779563_1280.jpg"
-            alt="A Snail, Sliming Menacingly" width="300" height="300">
+    <main>
+        <article>
+            <h3>How My Day Is Going</h3>
+            <h5>Author: Brandon Truong</h5>
+            <h6>Date Published: October 16, 2022</h6>
+            <p>
+                Today was just meant for me to get things done. You know, really get
+                things done and that hasn't really been the case in a pretty long time,
+                so let me get started on how that's going. We made some chicken vindaloo
+                during the first few hours of the day and really got into how cooking
+                can really make a difference in your life. Just taking the time to make
+                something good and you don't exactly how it's going to turn out, is
+                probably something that loving parents would say later in their life. In
+                a way, that gets you thinking that there are some aspects to people
+                you'll never really get to see, and that's okay I think. You can enjoy
+                someone in their most concrete self, but come to appreciate those
+                moments when they reveal something to you that you didn't know about
+                them before. It's an exercise, I think. Anyway, it was nice to get that
+                bit out, and it was probably just straight up unintelligble for some
+                people, and you know what? <strong>That's okay as well.</strong>
+            </p>
+            <img src="https://cdn.pixabay.com/photo/2020/01/20/05/57/funny-4779563_1280.jpg"
+                alt="A Snail, Sliming Menacingly" width="300" height="300">
 
-        <table>
-            <tbody>
-                <tr>
-                    <th scope="col">Snail</th>
-                    <th scope="col">Bird</th>
-                </tr>
-                <tr>
-                    <td>Slimey</td>
-                    <td>Flighty</td>
-                </tr>
-                <tr>
-                    <td>Shelly</td>
-                    <td>Feathery</td>
-                </tr>
-                <tr>
-                    <td>Stalky Eyes</td>
-                    <td>Wacky Eyes</td>
-                </tr>
-            </tbody>
-        </table>
-    </article>
+            <table>
+                <tbody>
+                    <tr>
+                        <th scope="col">Snail</th>
+                        <th scope="col">Bird</th>
+                    </tr>
+                    <tr>
+                        <td>Slimey</td>
+                        <td>Flighty</td>
+                    </tr>
+                    <tr>
+                        <td>Shelly</td>
+                        <td>Feathery</td>
+                    </tr>
+                    <tr>
+                        <td>Stalky Eyes</td>
+                        <td>Wacky Eyes</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+    </main>
     <article>
         <h3>How My Day Went Yesterday</h3>
         <h5>Author: Brandon Truong</h5>
