Fixed Newsletter Form

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </nav>
     </header>
     <main>
+        <h2>Blog</h2>
         <section>
             <article>
                 <h3>How My Day Is Going</h3>
@@ -94,11 +95,13 @@
                     alt="A Penguin Flying" width="300" height="300">
             </article>
         </section>
+        <h2>Subscribe to Newsletter</h2>
         <section>
+            <h2>Sign up for our newsletter</h2>
             <form>
-                <label> Sign up for our newsletter
-                    <input type="text">
-                </label>
+                <label for="email">Email</label>
+                <input type="text">
+                <label for="submit">Submit</label>
                 <button type="submit">Subscribe</button>
             </form>
         </section>
