Validated HTML Files

--- a/contact.html
+++ b/contact.html
@@ -27,15 +27,16 @@
 
     <main>
         <section>
+            <h2>Contact Me</h2>
             <form>
                 <label for="name">Name</label>
-                <input type="text" name="name">
+                <input type="text" id="name">
 
                 <label for="email">Email</label>
-                <input type="email" name="email">
+                <input type="email" id="email">
 
                 <label for="reason-select">Reason For Contact</label>
-                <select name="contact-reason">
+                <select name="contact-reason" id="reason-select">
                 <option value="hi">Hi</option>
                 <option value="contractor">Looking for a contractor</option>
                 <option value="interview">Interested in an interview</option>
