--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
     </header>
     <main>
-        <h2>Blog</h2>
         <section>
+            <h2>Blog</h2>
             <article>
                 <h3>How My Day Is Going</h3>
                 <h5>Author: Brandon Truong</h5>
@@ -95,13 +95,13 @@
                     alt="A Penguin Flying" width="300" height="300">
             </article>
         </section>
-        <h2>Subscribe to Newsletter</h2>
         <section>
+            <h2>Subscribe to Newsletter</h2>
             <form>
                 <label for="email">Email</label>
-                <input type="text">
+                <input type="text" id="email">
                 <label for="submit">Submit</label>
-                <button type="submit">Subscribe</button>
+                <button type="submit" id="submit">Subscribe</button>
             </form>
         </section>
     </main>
