--- a/contact.html
+++ b/contact.html
@@ -13,22 +13,28 @@
         content="Contact form made for me and by me, Brandon Truong"
     >
     <title>Contact</title>
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <ul>
+                <li><h5>Blog Time</h5></li>
                 <li><a href="./index.html">Index</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
+                <li><a href="#newsletter">Newsletter</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
+        <div class="sideline"></div>
+        <div class="dogear"></div>
+        <div class="dogear bottom"></div>
         <section>
             <h2>Contact Me</h2>
-            <form>
+            <form class="contact-form">
                 <label for="name">Name</label>
                 <input type="text" id="name">
 
@@ -43,12 +49,23 @@
                 </select>
 
                 <label for="comment">Comment</label>
-                <textarea id="comment" name="comment" rows="10" cols="40">
+                <textarea id="comment" name="comment" rows="10" cols="35">
         Let me know if you want to say anything else!</textarea
                 >
-                <button type="submit">SUBMIT!!!!</button>
+                <button type="submit" id="contact-submit">Submit</button>
             </form>
         </section>
+        <footer>
+            <section id="newsletter">
+                <h3>Subscribe to the Newsletter</h3>
+                <form>
+                    <label for="email2">Email</label>
+                    <input type="text" id="email2">
+                    <label for="submit"></label>
+                    <button type="submit" id="submit">Subscribe</button>
+                </form>
+            </section>
+        </footer>
     </main>
 </body>
 </html>
