Removed image resizing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         people, and you know what? <strong>That's okay as well.</strong>
                     </p>
                     <img src="https://cdn.pixabay.com/photo/2020/01/20/05/57/funny-4779563_1280.jpg"
-                        alt="A Snail, Sliming Menacingly" width="300" height="300">
+                        alt="A Snail, Sliming Menacingly">
 
                     <table>
                         <tbody>
@@ -105,7 +105,7 @@
                     further.
                 </p>
                 <img src="https://thumbs.dreamstime.com/b/surreal-funny-flying-penguin-bird-can-fly-above-clouds-blue-sky-114377523.jpg"
-                    alt="A Penguin Flying" width="300" height="300">
+                    alt="A Penguin Flying">
                 </div>
             </article>
         </section>
